[GOHW-7]: fix linter
